k8s/securebank/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-backend
  namespace: securebank-dev
  labels:
    app: securebank-backend
    app.kubernetes.io/name: securebank-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: securebank
    securebank.io/environment: dev
spec:
  type: ClusterIP
  selector:
    app: securebank-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
