k8s/securebank/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-frontend
  namespace: securebank-dev
spec:
  type: ClusterIP
  selector:
    app: securebank-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
