k8s/securebank/dev/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-postgres
  namespace: securebank-dev
  labels:
    app: securebank-postgres
    app.kubernetes.io/name: securebank-postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: securebank
    securebank.io/environment: dev
spec:
  type: ClusterIP
  selector:
    app: securebank-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
