k8s/securebank/dev/allow-backend-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-postgres
  namespace: securebank-dev
  labels:
    app.kubernetes.io/part-of: securebank
    securebank.io/environment: dev
spec:
  podSelector:
    matchLabels:
      app: securebank-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: securebank-backend
      ports:
        - protocol: TCP
          port: 5432
