k8s/securebank/dev/allow-frontend-egress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress-to-backend
  namespace: securebank-dev
  labels:
    app.kubernetes.io/part-of: securebank
    securebank.io/environment: dev
spec:
  podSelector:
    matchLabels:
      app: securebank-frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: securebank-backend
      ports:
        - protocol: TCP
          port: 5000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
