k8s/securebank/dev/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: securebank-dev
  labels:
    app.kubernetes.io/part-of: securebank
    securebank.io/environment: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
